--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -108,7 +108,12 @@ flutter:
     - assets/json/
     - assets/image/
     - assets/image/icon/
+    - assets/image/bank/
+    - assets/image/benefit/
+    - assets/image/credit_card/
+    - assets/image/illustration/
     - assets/image/flag/
+    - assets/image/splash/
     - assets/image/darkmode/
     - assets/translations/
     - assets/
